# ecef2geo_polynomial

./: .gitignore  CMakeLists.txt  README.md
coefficient_computations/: consts.hpp  evaluation_schema.hpp  main_additive.cpp  main_fourier.cpp  main_multiplicative.cpp  main_taylor.cpp  main_trigonometric.cpp  remez_mp.hpp  remez_sollya.hpp  settings.hpp  util_cheb.hpp  util_eval.hpp  util_four.hpp  util_geo.cpp  util_geo.hpp  util_mpgeo.hpp  util_poly.hpp  util_root.hpp  util_sym.hpp
transformation_implementations/: LICENSE.txt  coordinate_structs.hpp  ecef2geo_common.hpp  ecef2geo_fourier.hpp  ecef2geo_polynomial.hpp  ecef2geo_reference.hpp
transformation_tests/: CMakeLists.txt  transformation_tests.cpp  util_geo.hpp
